.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Execution_Sequence_Step__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__Child_Steps_Settings__c</fullName>
        <label>Parent Steps Settings</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Data_Set_Option__c</fullName>
        <label>Data Set Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use this data set independently</fullName>
                    <default>true</default>
                    <label>Use this data set independently</label>
                </value>
                <value>
                    <fullName>Overlay this data set by parent records</fullName>
                </value>
                <value>
                    <fullName>Deploy this data set and all parents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__Data_Set__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Data Set</label>
        <referenceTo>Dataplier__Data_Set__c</referenceTo>
        <relationshipLabel>Execution Sequence Steps</relationshipLabel>
        <relationshipName>Execution_Steps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dataplier__Execution_Condition__c</fullName>
        <label>Execution_Сondition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Run on success of the previous step</fullName>
                    <default>true</default>
                    <label>Run on success of the previous step</label>
                </value>
                <value>
                    <fullName>Run independently from the previous step</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__Execution_Sequence__c</fullName>
        <label>Execution Sequence</label>
        <referenceTo>Dataplier__Execution_Sequence__c</referenceTo>
        <relationshipLabel>Execution Sequence Steps</relationshipLabel>
        <relationshipName>Execution_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dataplier__Filter_Target_Records__c</fullName>
        <label>Filter Target Records</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Filter__c</fullName>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Hierarchy_Levels__c</fullName>
        <label>Hierarchy Levels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Key_Data_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the composite key</description>
        <label>Key Data Set</label>
        <referenceTo>Dataplier__Data_Set__c</referenceTo>
        <relationshipLabel>Execution Sequence Steps (Key Data Set)</relationshipLabel>
        <relationshipName>Execution_Sequence_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dataplier__Maximum_Deployed__c</fullName>
        <description>Maximum number of entries for deployed</description>
        <label>Maximum Deployed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Not_Populated_Lookups__c</fullName>
        <label>Not Populated Lookups</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INSERT</fullName>
                    <default>true</default>
                    <label>INSERT</label>
                </value>
                <value>
                    <fullName>UPSERT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__Parent_Id_Field__c</fullName>
        <label>Parent Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Parent_Steps_Settings__c</fullName>
        <label>Parent Steps Settings</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Parent_Steps__c</fullName>
        <label>Parent Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Second_Stage_Lookups__c</fullName>
        <label>Second Stage Lookups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__SelfLookups__c</fullName>
        <label>SelfLookups</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Step_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Step Number</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Execution Sequence Step</label>
    <nameField>
        <label>Sequence Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Execution Sequence Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>